now code chunks work as they should

--- a/Output/Report.html
+++ b/Output/Report.html
@@ -427,9 +427,8 @@ names, twitter handles, number of tweets and number of followers.</p>
   retryonratelimit = TRUE,
   verbose = TRUE,
   parse = TRUE,
-)
-
-DF_MP_under40 &lt;- tibble (MP_under40_names,MP_under40_t_handle, MP_under40_followers, MP_under40_n_tweets)</code></pre>
+)</code></pre>
+<pre class="r"><code>DF_MP_under40 &lt;- tibble (MP_under40_names,MP_under40_t_handle, MP_under40_followers, MP_under40_n_tweets)</code></pre>
 <pre class="r"><code>italian_MP_over40 = lists_members(
   list_id = &quot;1601572364214583298&quot;,
   slug = NULL,
@@ -440,9 +439,8 @@ DF_MP_under40 &lt;- tibble (MP_under40_names,MP_under40_t_handle, MP_under40_fol
   retryonratelimit = TRUE,
   verbose = TRUE,
   parse = TRUE,
-)
-
-DF_MP_over40 &lt;- tibble (MP_over40_names,MP_over40_t_handle, MP_over40_followers, MP_over40_n_tweets)</code></pre>
+)</code></pre>
+<pre class="r"><code>DF_MP_under40 &lt;- tibble (MP_under40_names,MP_under40_t_handle, MP_under40_followers, MP_under40_n_tweets)</code></pre>
 <p>Considering all these obstacles I faced, I decided to create a .dta
 dataset containing information about the XIX Legislatura Members of the
 Camera dei Deputati data; it was a really long process since I double
